# replay-recorder

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/encoder/: encoder.h
include/recorder/: event_sink.h  event_source.h  recorder.h  screenshot_event_source.h  screenshot_serialization_strategy.h  screenshot_timing_strategy.h  user_input_event_source.h  user_window_activity_event_source.h  windows_hook_manager.h
include/replay-recorder/: base_recorder.h  event_sink.h  event_source.h  keystroke_recorder.h  recorder.h  snapshot_stream.h  user_input_event_source.h  user_window_activity_event_source.h
include/replay-recorder/encoder/: encoder.h
include/replay-recorder/recorder/: event_sink.h  user_input_event_source.h  user_window_activity_event_source.h
include/replay/encoder/: encoder.h
include/replay/recorder/: event_sink.h  event_source.h  user_input_event_source.h  user_window_activity_event_source.h
include/utils/: error_messages.h  logging.h  timestamp_utils.h  utils.h
libs/utils/: CMakeLists.txt  timestamp_utils.cpp  utils.cpp
src/: CMakeLists.txt  event_sink.cpp  keystroke_recorder.cpp  main.cpp  snapshot_stream.cpp  user_input_event_source.cpp  user_window_activity_event_source.cpp
src/encoder/: CMakeLists.txt  main.cpp  rle.cpp
src/recorder/: CMakeLists.txt  event_sink.cpp  main.cpp  screenshot_event_source.cpp  screenshot_serialization_strategy.cpp  screenshot_timing_strategy.cpp  user_input_event_source.cpp  user_window_activity_event_source.cpp  windows_hook_manager.cpp
src/tests/: CMakeLists.txt  event_sink_tests.cpp  rle_tests.cpp
tests/: CMakeLists.txt  event_sink_tests.cpp  utils_tests.cpp
